[package]
name = "game"
version = "0.1.0"
authors = ["bryton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
gfx_core = "0.9"
gfx_device_gl = "0.16"
image = "0.22"
imgui = "0.2"
imgui-gfx-renderer = "0.2"